======================================================================
Changes for U-Boot 1.1.2:
======================================================================

* Code cleanup, mostly for GCC-3.3.x

* Cleanup confusing use of CONFIG_ETH*ADDR - ust his only to
  pre-define a MAC address; use CONFIG_HAS_ETH* to enable support for
  additional ethernet addresses.

* Cleanup drivers/i82365.c - avoid duplication of code

* Fix bogus "cannot span across banks" flash error message

* Code cleanup

* Add support for CompactFlash for the CPC45 Board.

* Fix problems with CMC_PU2 flash driver.

* Cleanup:
  - avoid trigraph warning in fs/ext2/ext2fs.c
  - rename UC100 -> uc100

* Add support for UC100 board

* Patch by Stefan Roese, 16 Dez 2004:
  - ext2fs support added
  - Tundra universe support added
  - Coldfire MCF5249 support added (no preloader needed!)
  - MCF5249 board TASREG added
  - PPC boards added: APC405, CPCI405DT, CPCI750, G2000, HH405,
    VOM405, WUH405
  - some esd boards updated
  - memory commands "mdc" and "mwc" added for cyclic read/write
    (CONFIG_MX_CYCLIC, see README for further description)

* Add support for INKA4X0 board

* Patch by Steven Scholz, 12 Dec 2004:
  Fix typo in AT91 memory setup.

* Patch by Martin Krause, 27 Oct 2004:
  - add support for "STK52xx" board (including PS/2 multiplexer)
  - add hardware detection for TQM5200

* Clean up CMC PU2 flash driver

* Update MAINTAINERS file

* Fix bug in MPC823 LCD driver

* Fix udelay() on AT91RM9200 for delays < 1 ms.

* Enable long help on CMC PU2 board;
  fix reset issue;
  increase CPU speed from 179 to 207 MHz.

* Fix smc91111 ethernet driver for Xaeniax board (need to handle
  unaligned tail part specially).

* Update for AT91RM9200DK and CMC_PU2 boards:
  - Enable booting directly from flash
  - fix CMC_PU2 flash driver

* Fix mkimage usage message

* Map SRAM on NC650 board

* Work around for Ethernet problems on Xaeniax board

* Patch by TsiChung Liew, 23 Sep 2004: